--- a/test.html
+++ b/test.html
@@ -12,7 +12,8 @@
     <script>
         _7vBR = {
             id: 211,
-            position: 'left bottom'
+            position: 'left bottom',
+            mode: 'all'
         };
         var s = document.createElement('script');
         s.type = 'text/javascript';
