Добавил параметр скрытия копирайта виджета nocopy

--- a/test.html
+++ b/test.html
@@ -11,9 +11,9 @@
     <!-- BEGIN BOOKING RATING CODE {literal} -->
     <script>
         _7vBR = {
-            id: 211,
+            id: 206,
             position: 'left bottom',
-            mode: 'all'
+            mode: 'all',
         };
         var s = document.createElement('script');
         s.type = 'text/javascript';
